# corner

./: .gitignore  Cargo.toml  README.md  README.template.md  build.rs
docs/examples/src/: datepicker.tape  entry-ops.tape  example_global_journal.md  example_journal.md  favorite-tags.tape  filter.tape  hero.tape  reorder.tape  selection.tape
docs/examples/src/profile/calendars/: personal.ics  work.ics
docs/examples/tapes/: datepicker.tape  entry-ops.tape  favorite-tags.tape  filter.tape  hero.tape  selection.tape
docs/templates/: README.template.md
src/: app.rs  config.rs  config_template.toml  cursor.rs  dispatch.rs  handlers.rs  lib.rs  main.rs  recorder.rs  storage.rs  testrun.rs  ui.rs
src/app/: calendar.rs  combined.rs  command.rs  content.rs  date_interface.rs  datepicker.rs  edit_mode.rs  entry_ops.rs  filter_ops.rs  hints.rs  interface_ops.rs  journal.rs  mod.rs  navigation.rs  palette.rs  reorder.rs  selection_ops.rs  tag_ops.rs
src/app/actions/: content_ops.rs  create.rs  cycle_type.rs  date.rs  delete.rs  edit.rs  entry.rs  executor.rs  mod.rs  paste.rs  tag.rs  types.rs
src/app/hints/: compute.rs  display.rs  mod.rs  patterns.rs  selection.rs  types.rs
src/calendar/: fetch.rs  mod.rs  parse.rs  store.rs
src/registry/: actions.toml  commands.toml  date_values.toml  filters.toml  footer.toml  help.toml  help_entries.toml  keys.toml  mod.rs
src/storage/: context.rs  date_parsing.rs  entries.rs  filter.rs  mod.rs  persistence.rs  project_registry.rs
src/ui/: agenda_widget.rs  autocomplete.rs  calendar.rs  container.rs  context.rs  daily.rs  date_interface.rs  datepicker.rs  filter.rs  footer.rs  help.rs  hints.rs  interface_modal.rs  interface_popup.rs  layout.rs  mod.rs  popup_interface.rs  prep.rs  project_interface.rs  project_picker.rs  render.rs  rows.rs  scroll.rs  shared.rs  surface.rs  tag_interface.rs  theme.rs  view_model.rs
src/ui/overlay/: command_palette.rs  confirm.rs  date_picker.rs  mod.rs  shared.rs
src/ui/views/: daily.rs  filter.rs
templates/: README.template.md
tests/: command_mode.rs  daily_view.rs  edge_cases.rs  edit_mode.rs  filter_view.rs  hints.rs  interface_mode.rs  invariants.rs  later_entries.rs  multi_journal.rs  navigation.rs  persistence.rs  recurring_entries.rs  selection_mode.rs  smoke.rs  sync.rs  workflows.rs
tests/helpers/: mod.rs
