[package]
name = "caliber"
version = "0.2.0"
edition = "2024"
description = "A simple, bullet journal-inspired way to capture tasks and notes in the terminal"
license = "MIT"
repository = "https://github.com/kylemorck/caliber"
readme = "README.md"
keywords = ["tui", "terminal", "bullet-journal", "todo", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
dirs = "6.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
