[package]
name = "caliber"
version = "0.4.0"
edition = "2024"
description = "A terminal-based task journal for developers. Capture ideas without leaving your workflow, find them when you need them."
license = "MIT"
repository = "https://github.com/bantamhq/caliber"
readme = "README.md"
keywords = ["tui", "terminal", "bullet-journal", "todo", "productivity"]
categories = ["command-line-utilities"]

[lib]
doctest = false

[dependencies]
ratatui = { version = "0.29", features = ["widget-calendar"] }
time = "0.3"
crossterm = "0.28"
chrono = "0.4"
dirs = "6.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
unicode-width = "0.2"
regex = "1"
arboard = "3.6.1"

[build-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
